--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "airtable": "^0.12.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "lodash": "^4.17.21"
   }
