--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "airtable": "^0.12.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "openai": "^4.0.0"
   }
 }
